Adding All Sector and Subcription
